Closed
Bug 359147
Opened 18 years ago
Closed 18 years ago
big images don't redraw
Categories
(Core :: Graphics, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: syskin2, Assigned: vlad)
References
()
Details
(Keywords: regression)
Attachments
(2 files)
85.61 KB,
image/png
|
Details | |
1015 bytes,
patch
|
pavlov
:
review+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20061101 Firefox/2.0
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20061101 Firefox/2.0
When I'm trying to open a big image, it initially downloads and displays fine. However as soon as it finished downloading, it no longer redraws - if I take another window and move in front of firefox, the image disappears.
Reproducible: Always
Steps to Reproduce:
1. Open big image (see URL)
2. Wait until it finishes loading
3. Resize firefox window, switch tabs, bring another window to front or otherwise do stuff to redraw the image again
Actual Results:
There's whiteness instead of image. See attachment.
Using 6600GT and version 91.47 official drivers. 2048x2048 images seem fine, I don't know what the exact threshold is.
Reporter | ||
Comment 1•18 years ago
|
||
...just in case it wasn't obvious what I meant ;)
Comment 2•18 years ago
|
||
I can't reproduce this on Linux.
Comment 3•18 years ago
|
||
Confirmed, I actually just noticed this with a different image: http://www.zaon.com/rpg/downloads/ZAON_GalaxyPosterMap.jpg
Note that you have to wait for the image to completely load before it stops redrawing.
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20061101 Minefield/3.0a1 ID:2006110104 [cairo]
Status: UNCONFIRMED → NEW
Ever confirmed: true
Comment 4•18 years ago
|
||
WFM with Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20061101 Minefield/3.0a1
I couldn't identify your user agent so I tried also branch but both show no problems. I resized, wiped with the options window over it, switched tabs, no problem here.
Reporter | ||
Comment 5•18 years ago
|
||
(In reply to comment #4)
> I couldn't identify your user agent so I tried also branch but both show no
> problems. I resized, wiped with the options window over it, switched tabs, no
> problem here.
Ah sorry, I overwrote my UA (the last part) for one evil sniffing website which otherwise won't let me in. But what I use is current 3.0a1 nightly.
I switched to Minefields a couple of days ago and they all had it so far.
Comment 6•18 years ago
|
||
2006080907 ok
2006080914 broke
which points to Bug 342366
There's also Bug 343655 on that day but from what I recall that landed after the 2006080914 build.
Blocks: 342366
Keywords: regression
Updated•18 years ago
|
Flags: blocking1.9?
Assignee | ||
Comment 7•18 years ago
|
||
(In reply to comment #6)
> 2006080907 ok
> 2006080914 broke
> which points to Bug 342366
> There's also Bug 343655 on that day but from what I recall that landed after
> the 2006080914 build.
Are you sure that 343655 isn't in? That would be the logical culprit, much more likely than 342366.
Comment 8•18 years ago
|
||
(In reply to comment #7)
>
> Are you sure that 343655 isn't in? That would be the logical culprit, much
> more likely than 342366.
>
I thought it wasn't. But I also thought bug 343655 made more sense. That's why I mentioned it.
Tinderbox doesn't show the checkins anymore:
http://tinderbox.mozilla.org/showbuilds.cgi?tree=Firefox&maxdate=1155160484&legend=0
Maybe because the tinderboxes have changed.
Assignee | ||
Updated•18 years ago
|
Assignee: nobody → vladimir
Flags: blocking1.9? → blocking1.9+
Whiteboard: [blocking1.9a1+]
Assignee | ||
Comment 9•18 years ago
|
||
I can't actually reproduce this any more -- some of the correctness fixes I checked in yesterday may have fixed it. Could you retest with the latest nightly?
Comment 10•18 years ago
|
||
It does seem different. But now it's all or nothing. Now the whole image will disappear. And it disappears easily. Most anything will make it disappear. Even doing nothing it will usually disappear after loading.
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20061108 Minefield/3.0a1 ID:2006110811 [cairo]
Assignee | ||
Comment 11•18 years ago
|
||
Hmm. Ok, I'll do some more testing; out of curiosity, what video card/driver are you using?
Comment 12•18 years ago
|
||
I've got a Nvidia GeForce4 MX 420. I had drivers that were 11 months old. Now I updated to the most recent drivers with no difference.
Comment 13•18 years ago
|
||
It does seem system specific as my system at home does not have this problem.
Reporter | ||
Comment 14•18 years ago
|
||
(In reply to comment #9)
> I can't actually reproduce this any more -- some of the correctness fixes I
> checked in yesterday may have fixed it. Could you retest with the latest
> nightly?
There's no change for me :(
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20061108 Minefield/3.0a1
Comment 15•18 years ago
|
||
And with my ATI Radeon IGP-320 (U1) I have never seen this specific problem at all :).
Comment 16•18 years ago
|
||
I can't reproduce this anymore - Mobile Intel 915/910 graphics
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20061109 Minefield/3.0a1 ID:2006110904 [cairo]
Comment 17•18 years ago
|
||
Actually, the ZAON image works now (and didn't before) but the NASA one still disappears.
Assignee | ||
Comment 18•18 years ago
|
||
A simple fix here would just be to not optimize images that are beyond a certain size, probably anything that's bigger than 2K in either direction.
Assignee | ||
Comment 19•18 years ago
|
||
Don't optimize big images into DDBs; I consider this a bandaid though, we should figure out how to detect whether something failed or not when creating the DDB. I couldn't find any way to query the system for the max size of a DDB, however, after reading a bunch of info on http://www.efg2.com/Lab/Graphics/VeryLargeBitmap.htm , the solution seems to be:
# Don't create DDB's that are larger than the screen.
# Don't create/blt DDB's from a DIB, were the memory consumption of the source rectangle exceeds the memory consumption of the screen.
1kx1k still might cause problems on some systems, so we should actually do the screen size query; but getting that info to here is a bit harder, and this should do for the alpha.
Attachment #245255 -
Flags: review?(pavlov)
Comment 20•18 years ago
|
||
Comment on attachment 245255 [details] [diff] [review]
don't put big images in DDBs
can you make those a define or const somewhere?
Attachment #245255 -
Flags: review?(pavlov) → review+
Assignee | ||
Comment 21•18 years ago
|
||
Patch checked in; clearing blocking1.9a1+, we should revisit this for the release to make it more robust.
Please let me know if this still appears in tomorrow's nightly (or later).
Whiteboard: [blocking1.9a1+]
Assignee | ||
Updated•18 years ago
|
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•