b=359147, big images don't redraw, r=stuart